# kent

./: Cargo.toml  README.md  flake.nix
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: release-drafter.yml
src/: cli.rs  k8s.rs  main.rs
